Improved hoover synthesis

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     canvas {
       display:block;
       margin: auto;
-      /* cursor: none !important; */
+      cursor: none !important;
     }
     #frame {
       position: absolute;
