--- a/index.html
+++ b/index.html
@@ -11,7 +11,6 @@
     canvas {
       display:block;
       margin: auto;
-      cursor: none !important;
     }
     #frame {
       position: absolute;
@@ -22,10 +21,20 @@
       height: 80%;
       transform: translate(50%, -50%);
       -webkit-transform: translate(-50%, -50%);
-}
+    }
+    p {
+      font-size: 1.5rem;
+      font-weight: bold;
+      margin: 1rem auto;
+      font-family: Helvetica, Arial, sans-serif;
+      display: block;
+      text-align: center;
+      letter-spacing: -1px;
+    }
   </style>
 </head>
 <body>
+  <p>Click and drag to hoover</p>
   <div id="frame"></div>
 
   <script src="node_modules/pixi.js/dist/pixi.min.js"></script>
