--- a/index.html
+++ b/index.html
@@ -30,6 +30,12 @@
       display: block;
       text-align: center;
       letter-spacing: -1px;
+      -webkit-touch-callout: none;
+      -webkit-user-select: none;
+       -khtml-user-select: none;
+         -moz-user-select: none;
+          -ms-user-select: none;
+              user-select: none;
     }
   </style>
 </head>
