Added hoover heat base functionality and stage refresh

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
   <link rel="stylesheet" href="/dist/main.css">
 </head>
 <body>
+  <span id="heat">0</span>
   <p>Click and drag to hoover</p>
   <div id="frame"></div>
 
