Added progress bar, updated fonts

--- a/index.html
+++ b/index.html
@@ -4,9 +4,13 @@
   <meta charset="utf-8">
   <title>Hoover :)</title>
   <link rel="stylesheet" href="/dist/main.css">
+  <link href="https://fonts.googleapis.com/css2?family=Press+Start+2P&display=swap" rel="stylesheet">
 </head>
 <body>
-  <span id="heat">0</span>
+  <div class="heat">
+    <div id="heatStatus"></div>
+    <span>HEAT</span>
+  </div>
   <p>Click and drag to hoover</p>
   <div id="frame"></div>
 
