Stage reset fixed, Strobe fixed

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
   <meta charset="utf-8">
-  <title>Hoover :)</title>
+  <title>hooover</title>
   <link rel="stylesheet" href="/dist/main.css">
   <link href="https://fonts.googleapis.com/css2?family=Press+Start+2P&display=swap" rel="stylesheet">
 </head>
@@ -11,7 +11,7 @@
     <div id="heatStatus"></div>
     <span>HEAT</span>
   </div>
-  <p>Click and drag to hoover</p>
+  <p>Click and drag to hooover</p>
   <div id="frame"></div>
 
   <script src="node_modules/pixi.js/dist/pixi.min.js"></script>
